# py130

./: README.md
lesson1/: files.py  generators.py  higher_order_func_problems.py  todolist.py
lesson2/: args_and_params.py  closures.py  iterable_unpacking.py  side_effects.py
lesson3/: .coverage  test_add.py  test_car.py  test_todolist.py  todolist.py
lesson4/challenges/: easy1.py
lesson4/todolist_package/: LICENSE  pyproject.toml
lesson4/todolist_package/src/todolist_herun/: todo.py
lesson4/todolist_package/src/todolist_herun.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lesson4/todolist_package/tests/: test_todolist.py
py139/: args_params.py  closures.py  decorators.py  file_handling.py  generators.py  hof.py  lambdas.py  modules.py  pfa.py  pure_functions.py  testing.py
