[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todolist_herun"
verson = "0.1.0"
authors = [
    {name = "Herun", email = "herun.s@gmail.com"}
]
description = "A working todo list application"
readme = "README.md"
requires-python = ">=3.8"
license = {
    text = "MIT"
}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HerunTarun/py130"
Issues = "https://github.com/HerunTarun/py130/issues"